force-app/main/default/objects/APXT_Redlining__Contract_Agreement__c/fields/Data_Storage_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_Requirements__c</fullName>
    <description>Setting this to Does Not Consent will trigger the flow &quot;Contract Agreement - Update Field on other Object Flow DSP&quot; to update the same field on the related Account to Does Not Consent</description>
    <label>Data Storage Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Storage_Requirements</valueSetName>
    </valueSet>
</CustomField>