force-app/main/default/objects/APXT_Redlining__Contract_Agreement__c/fields/Deal_Support_Process__c.field-meta.xml
<CustomField>
    <fullName>Deal_Support_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Support Process</label>
    <referenceTo>Deal_Support_Process__c</referenceTo>
    <relationshipLabel>Contract Agreements</relationshipLabel>
    <relationshipName>Contract_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>