force-app/main/default/objects/APXT_Redlining__Contract_Agreement__c/fields/LSA_Template_Key__c.field-meta.xml
<CustomField>
    <fullName>LSA_Template_Key__c</fullName>
    <formula>IF(AND(APXT_Redlining__Opportunity__r.VILT_Program__c = TRUE),&apos;0T_020EAK099172&apos;,
IF(AND(APXT_Redlining__Opportunity__r.VILT_Program__c = FALSE), &apos;0T_014EA2950633&apos;, &apos;0T_020EAK099172&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LSA Template Key</label>
    <type>Text</type>
</CustomField>