force-app/main/default/objects/APXT_Redlining__Contract_Agreement__c/fields/Single_Contract_Covers_All_DSPs__c.field-meta.xml
<CustomField>
    <fullName>Single_Contract_Covers_All_DSPs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this contract is all-inclusive of the other Deal Support Processes on the same opportunity. When this Contract is marked as &quot;Active&quot; it update all DSPs to confirmed.</inlineHelpText>
    <label>Single Contract Covers All DSPs</label>
    <type>Checkbox</type>
</CustomField>