force-app/main/default/objects/APXT_Redlining__Contract_Agreement__c/fields/SOW_Template_Key__c.field-meta.xml
<CustomField>
    <fullName>SOW_Template_Key__c</fullName>
    <formula>IF( AND(Deal_Support_Process__r.VILT_Program__c = TRUE,
OR(ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Certification&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Employee&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Leading Your Team Through Change&apos;))), &apos;0T_007EA2987725&apos;,
IF(AND(Deal_Support_Process__r.VILT_Program__c = TRUE,
OR(ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Sponsor&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Delivering Project Results Workshop&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Taking Charge of Change&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Integrating Agile&apos;))), &apos;0T_009EA2925139&apos;,
IF(AND(Deal_Support_Process__r.VILT_Program__c = FALSE,
OR(ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Sponsor&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Taking Charge of Change&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Certification&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Leading Your Team Through Change&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Employee&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Integrating Agile&apos;),
ISPICKVAL( Deal_Support_Process__r.Program_Title__c, &apos;Delivering Project Results Workshop&apos;))), &apos;0T_001EA2221822&apos;, &apos;0T_006EA2069382&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOW Template Key</label>
    <type>Text</type>
</CustomField>